--- a/package.json
+++ b/package.json
@@ -3,5 +3,23 @@
     "console.table": "^0.10.0",
     "inquirer": "^8.2.2",
     "mysql2": "^2.3.3"
-  }
+  },
+  "name": "employee_tracker",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JoelHauser/employee_tracker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JoelHauser/employee_tracker/issues"
+  },
+  "homepage": "https://github.com/JoelHauser/employee_tracker#readme"
 }
