--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^8.2.2",
+    "inquirer": "^8.2.3",
     "mysql2": "^2.3.3"
   },
   "name": "employee_tracker",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,7 @@
   "bugs": {
     "url": "https://github.com/JoelHauser/employee_tracker/issues"
   },
-  "homepage": "https://github.com/JoelHauser/employee_tracker#readme"
+  "homepage": "https://github.com/JoelHauser/employee_tracker#readme",
+  "devDependencies": {},
+  "keywords": []
 }
